    - Refreshed as per upstream changes
  * d/p/keyboard-Filter-redundant-FocusTracker-position-changed-s.patch,
    d/p/keyboard-Listen-to-IbusPanelService-focus-in-out-to-track.patch:
    - Fix OSK activation on X11 (LP: #1760399)
  * d/p/power-Label-the-PENDING_CHARGE-state-as-Not-Charging.patch:
    - Label the PENDING_CHARGE state as "Not Charging" (LP: #1745032)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Tue, 22 Jan 2019 01:53:57 +0100

gnome-shell (3.28.3-0ubuntu0.18.04.4) bionic; urgency=medium

  * debian/patches/ibus-set-content-type-no-holdKeyboard.patch:
    - Cherry-pick upstream commit to prevent focus stealing on password fields
      in firefox when ibus is used (LP: #1765304)

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Wed, 05 Dec 2018 13:08:10 +0000

gnome-shell (3.28.3-0ubuntu0.18.04.3) bionic; urgency=medium

  * debian/ubuntu.css:
    - use defined color for menu separators (LP: #1739931)
    - set StEntry minimun height to work properly with Ubuntu font (LP: #1743058)
  * debian/patches/st-button-Ignore-pointer-emulated-touch-events.patch:
    - Don't emit two click events on touch under X11 (LP: #1745888)
  * d/p/st-scroll-view-Handle-the-case-where-scrollbars-are-NULL.patch,
    d/p/st-scroll-view-Remove-scrollbars-references-on-dispose.patch:
    - Handle NULL scroll bars in st-scroll-view (LP: #1725312)

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Tue, 06 Nov 2018 17:49:17 +0000

gnome-shell (3.28.3-0ubuntu0.18.04.2) bionic; urgency=medium

  * New upstream release (LP: #1718931, LP: #1782614)
  * debian/patches/30-remoteMenu-Prevent-the-shell-from-becoming-unrespons.patch,
    debian/patches/magnifier.js-Fix-zoom-juddering.patch,
    debian/patches/st-label-Unset-clutter-text-instance-on-disposal.patch,
    debian/patches/st-texture-cache-Don-t-add-NULL-textures-to-cache.patch,
    debian/patches/st-texture-cache-Save-cairo-surfaces-to-a-different-map.patch,