@@ -1,5 +1,5 @@
 From: =?utf-8?q?Florian_M=C3=BCllner?= <fmuellner@gnome.org>
-Date: Fri, 23 Feb 2018 16:58:22 -0600
+Date: Fri, 23 Feb 2018 23:58:22 +0100
 Subject: volume: Add back sound feedback on scroll
 
 Commit 8d4855f1008 accidentally removed the volume change feedback
@@ -34,8 +34,8 @@ Bug-GNOME: https://gitlab.gnome.org/GNOME/gnome-shell/issues/53
 Forwarded: yes, https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/51
 ---
  js/ui/slider.js        |  2 --
- js/ui/status/volume.js | 19 ++++++++++++++++++-
- 2 files changed, 18 insertions(+), 3 deletions(-)
+ js/ui/status/volume.js | 20 +++++++++++++++++++-
+ 2 files changed, 19 insertions(+), 3 deletions(-)
 
 diff --git a/js/ui/slider.js b/js/ui/slider.js
 index 9853929..30295b4 100644
@@ -52,18 +52,20 @@ index 9853929..30295b4 100644
          }
          return Clutter.EVENT_PROPAGATE;
 diff --git a/js/ui/status/volume.js b/js/ui/status/volume.js
-index 65c4c42..c0f9cf3 100644
+index 65c4c42..de5f188 100644
 --- a/js/ui/status/volume.js
 +++ b/js/ui/status/volume.js
-@@ -4,6 +4,7 @@ const Clutter = imports.gi.Clutter;
+@@ -3,7 +3,9 @@
+ const Clutter = imports.gi.Clutter;
  const Lang = imports.lang;
  const Gio = imports.gi.Gio;
++const GLib = imports.gi.GLib;
  const Gvc = imports.gi.Gvc;
 +const Mainloop = imports.mainloop;
  const St = imports.gi.St;
  const Signals = imports.signals;
  
-@@ -36,9 +37,16 @@ var StreamSlider = new Lang.Class({
+@@ -36,9 +38,16 @@ var StreamSlider = new Lang.Class({
  
          this.item = new PopupMenu.PopupBaseMenuItem({ activate: false });
  
@@ -81,7 +83,7 @@ index 65c4c42..c0f9cf3 100644
  
          this._icon = new St.Icon({ style_class: 'popup-menu-icon' });
          this.item.actor.add(this._icon);
-@@ -135,6 +143,7 @@ var StreamSlider = new Lang.Class({
+@@ -135,6 +144,7 @@ var StreamSlider = new Lang.Class({
  
          let volume = value * this._get_control_max_volume();
          let prevMuted = this._stream.is_muted;
@@ -89,7 +91,7 @@ index 65c4c42..c0f9cf3 100644
          if (volume < 1) {
              this._stream.volume = 0;
              if (!prevMuted)
-@@ -145,6 +154,14 @@ var StreamSlider = new Lang.Class({
+@@ -145,6 +155,14 @@ var StreamSlider = new Lang.Class({
                  this._stream.change_is_muted(false);
          }
          this._stream.push_volume();
