@@ -24,6 +24,8 @@ gnome-shell (3.28.3+git20190124-0ubuntu18.04.1) UNRELEASED; urgency=medium
     - Fix OSK activation on X11 (LP: #1760399)
   * d/p/power-Label-the-PENDING_CHARGE-state-as-Not-Charging.patch:
     - Label the PENDING_CHARGE state as "Not Charging" (LP: #1745032)
+  * d/p/debian/patches/volume-Add-back-sound-feedback-on-scroll.patch:
+    - Add missing include (LP: #1811908)
 
  -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Tue, 22 Jan 2019 01:53:57 +0100
 
